--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome to Yatzy</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to the Official Yatzy Game!</h1>
+        <img src="dice-animation.gif" alt="Animated Dice" class="dice-image">
+    </header>
+    
+    <div class="button-container">
+        <button>Play Game!</button>
+        <button>Game Rules</button>
+        <button>About Us</button>
+    </div>
+</body>
+</html>
 
