--- a/Lab 5/index.html
+++ b/Lab 5/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Welcome to Yatzy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <title>The Official Yatzy Game - Mulex </title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to the Official Yatzy Game!</h1>
-        <img src="dice-animation.gif" alt="Animated Dice" class="dice-image">
-    </header>
-    
-    <div class="button-container">
-        <button>Play Game!</button>
-        <button>Game Rules</button>
-        <button>About Us</button>
-    </div>
+    <nav>
+        <div class="logo">Mulex</div>
+        <div class="nav-items">
+            <a href="/">Game Rules</a> <a href="/">About</a> <a
+            href="/">Contact</a>
+        </div>
+    </nav>
+    <section class="dice">
+        <div class="dice-container">
+            <div class="column-left">
+            <h1>Welcome to the Official Yatzy Game!</h1>
+            <p>
+                Developed By Mulex.
+            </p>
+            <a href="play.html">
+            <button>Play Game</button>
+            </a>
+        </div>
+        <div class="column-right">
+            <img
+            src="./dice-animation.gif" 
+            alt="illustration" 
+            class="dice-image" 
+            />
+        </div>
+        </div>
+    </section>
 </body>
 </html>
+
 
