--- a/Assignment 1/about.html
+++ b/Assignment 1/about.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html> <!-- Specifies the document type as HTML -->
+<html lang="en"> <!-- Begins the HTML document and sets the language to English -->
+<head>
+    <!-- Declares the character encoding as UTF-8 -->
+    <meta charset="UTF-8"> 
+    <!-- Defines the viewport settings for responsive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <!-- Sets the title of the webpage displayed in the browser tab -->
+    <title>About Mulex</title> 
+    <style>
+        body {
+            /* Defines the background color of the page */
+            background-color: white; 
+            /* Sets the text color on the page */
+            color: black; 
+            /* Specifies the font family for text */
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial Black, sans-serif; 
+        }
+
+        header {
+            /* Centers the text within the header element */
+            text-align: center;
+            /* Adds padding around the header element */
+            padding: 20px; 
+        }
+
+        main {
+            /* Centers the text within the main content section */
+            text-align: center; 
+            /* Sets the maximum width for the main content */
+            max-width: 800px; 
+            /* Centers the main content by setting left and right margins to "auto" */
+            margin: 0 auto; 
+            /* Adds padding around the main content */
+            padding: 20px; 
+        }
+
+        h1 {
+            /* Sets the font size for the level 1 heading */
+            font-size: 24px; 
+        }
+
+        p {
+            /* Sets the font size for paragraphs */
+            font-size: 18px; 
+            /* Defines the line height for paragraphs to improve readability */
+            line-height: 1.5; 
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <!-- Displays the level 1 heading within the header element -->
+        <h1>About Mulex</h1> 
+    </header>
+    <main>
+        <p>Mulex is a visionary gaming company that was established in 2004 by its founder, Mubarak Hassan. The company was born out of Mubarak's deep-rooted passion for video games and programming.</p>
+
+        <!-- Displays a level 2 heading for "Founder's Background" -->
+        <h2>Founder's Background</h2> 
+        <p>Mubarak Hassan has been a video game enthusiast since his early childhood. He spent countless hours playing and exploring various video games, immersing himself in the virtual worlds created by game developers. This passion drove him to learn programming and game development, starting with simple game mods and projects.</p>
+        <p>Over the years, Mubarak honed his skills in programming and game design, eventually leading him to establish Mulex in 2004. His unique combination of gaming experience and technical expertise forms the foundation of the company's vision and success.</p>
+
+        <!-- Displays a level 2 heading for "Company Vision" -->
+        <h2>Company Vision</h2> 
+        <p>Mulex's vision is to be recognized as one of the best gaming companies in the industry. The company is dedicated to creating immersive, entertaining, and innovative video games that captivate players from around the world. With a strong focus on quality and player experience, Mulex is committed to pushing the boundaries of gaming and delivering exceptional entertainment.</p>
+        <p>Our team of talented developers and designers works tirelessly to bring Mubarak's vision to life, creating games that bring joy and excitement to the gaming community. We look forward to continuing this journey and making a lasting impact on the gaming industry.</p>
+    </main>
+</body>
+</html>
 
