--- a/Assignment 1/rules.html
+++ b/Assignment 1/rules.html
@@ -1,1 +1,85 @@
+<!DOCTYPE html> <!-- Specifies the document type as HTML -->
+<html lang="en"> <!-- Begins the HTML document and sets the language to English -->
+<head>
+    <!-- Declares the character encoding as UTF-8 -->
+    <meta charset="UTF-8"> 
+    <!-- Defines the viewport settings for responsive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <!-- Sets the title of the webpage displayed in the browser tab -->
+    <title>Yatzy Rules</title> 
+    <style>
+        body {
+            /* Defines the background color of the page */
+            background-color: white; 
+            /* Sets the text color on the page */
+            color: black; 
+            /* Specifies the font family for text */
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial Black, sans-serif; 
+        }
+
+        header {
+            /* Centers the text within the header element */
+            text-align: center; 
+            /* Adds padding around the header element */
+            padding: 20px; 
+        }
+
+        main {
+            /* Sets the maximum width for the main content */
+            max-width: 800px; 
+            /* Centers the main content by setting left and right margins to "auto" */
+            margin: 0 auto; 
+            /* Adds padding around the main content */
+            padding: 20px; 
+        }
+
+        h1 {
+            /* Sets the font size for the level 1 heading */
+            font-size: 24px; 
+        }
+
+        p {
+            /* Sets the font size for paragraphs */
+            font-size: 18px; 
+            /* Defines the line height for paragraphs to improve readability */
+            line-height: 1.5; 
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <!-- Displays the level 1 heading within the header element -->
+        <h1>Yatzy Game Rules</h1> 
+    </header>
+    <main>
+        <p>Yatzy is a popular dice game played with five dice. The objective of the game is to score points by rolling specific combinations. Here are the basic rules:</p>
+
+        <!-- Displays a level 2 heading for "Gameplay" -->
+        <h2>Gameplay</h2> 
+        <p>1. Each player takes turns rolling five dice.</p>
+        <p>2. You have up to three rolls per turn to achieve the highest possible score.</p>
+        <p>3. After each roll, you can choose which dice to keep and which to reroll.</p>
+
+        <!-- Displays a level 2 heading for "Scoring" -->
+        <h2>Scoring</h2> 
+        <p>1. Score points based on various combinations such as:</p>
+        <ul> <!-- Starts an unordered list of scoring combinations -->
+            <li>Ones, Twos, Threes, Fours, Fives, and Sixes: Sum of dice with matching values.</li>
+            <li>Three of a Kind: At least three dice with the same value (sum of all dice).</li>
+            <li>Four of a Kind: At least four dice with the same value (sum of all dice).</li>
+            <li>Full House: Three dice of one value and two dice of another (25 points).</li>
+            <li>Small Straight: Four consecutive values (30 points).</li>
+            <li>Large Straight: Five consecutive values (40 points).</li>
+            <li>Yatzy: All five dice with the same value (50 points).</li>
+            <li>Chance: Sum of all dice.</li>
+        </ul>
+        <p>2. You can only score each combination once in a game.</p>
+ 
+        <!-- Displays a level 2 heading for "Winning" -->
+        <h2>Winning</h2> 
+        <p>1. The player with the highest total score at the end of the game wins.</p>
+        <p>2. The game typically consists of a set number of rounds or turns.</p>
+    </main>
+</body>
+</html>
 
