--- a/Assignment 1/contact.html
+++ b/Assignment 1/contact.html
@@ -1,1 +1,87 @@
+<!DOCTYPE html> <!-- Specifies the document type as HTML -->
+<html lang="en"> <!-- Begins the HTML document and sets the language to English -->
+<head>
+    <!-- Declares the character encoding as UTF-8 -->
+    <meta charset="UTF-8"> 
+    <!-- Defines the viewport settings for responsive design -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <!-- Sets the title of the webpage displayed in the browser tab -->
+    <title>Contact Mulex</title> 
+    <style>
+        body {
+            /* Defines the background color of the page */
+            background-color: white; 
+            /* Sets the text color on the page */
+            color: black; 
+            /* Specifies the font family for text */
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial Black, sans-serif; 
+        }
+
+        header {
+            /* Centers the text within the header element */
+            text-align: center; 
+            /* Adds padding around the header element */
+            padding: 20px; 
+        }
+
+        main {
+            /* Sets the maximum width for the main content */
+            max-width: 800px; 
+            /* Centers the main content by setting left and right margins to "auto" */
+            margin: 0 auto;
+            /* Adds padding around the main content */
+            padding: 20px; 
+        }
+
+        h1 {
+            /* Sets the font size for the level 1 heading */
+            font-size: 24px; 
+        }
+
+        p {
+            /* Sets the font size for paragraphs */
+            font-size: 18px; 
+            /* Defines the line height for paragraphs to improve readability */
+            line-height: 1.5; 
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <!-- Displays the level 1 heading within the header element -->
+        <h1>Contact Mulex</h1> 
+    </header>
+    <main>
+        <!-- Displays a level 2 heading for "Contact Information" -->
+        <h2>Contact Information</h2> 
+        <p>If you have any questions, feedback, or inquiries, please feel free to get in touch with us using the contact information provided below:</p>
+
+        <!-- Displays a level 3 heading for "Email" -->
+        <h3>Email</h3> 
+         <!-- Provides an email link -->
+        <p>Contact our support team via email at: <a href="mailto:support@mulex.com">support@mulex.com</a></p>
+
+        <!-- Displays a level 3 heading for "Phone" -->
+        <h3>Phone</h3> 
+        <p>For phone inquiries, you can reach us at: +1 (123) 456-7890</p>
+
+        <!-- Displays a level 3 heading for "Business Hours" -->
+        <h3>Business Hours</h3> 
+        <p>Our business hours are from Monday to Friday, 9:00 AM to 5:00 PM (local time).</p>
+
+        <!-- Displays a level 2 heading for "Address" -->
+        <h2>Address</h2> 
+        <p>If you need to visit our office in person, you can find us at the following address:</p>
+        <address> <!-- Uses the <address> element to format the address -->
+            Mulex Stars
+            <br>
+            1234 Elm Street
+            <br>
+            Suite 567
+            <br>
+            Cityville, State 12345
+        </address>
+    </main>
+</body>
+</html>
 
